--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>John Doe</h1>
-  <p>Web Developer | john@example.com</p>
-  <p>GitHub: https://github.com/johndoe</p>
+  <h1>Ramakrishna</h1>
+  <p>Web Developer | ramkrishna.v@gmail.com</p>
+  <p>GitHub: https://github.com/Ramakrishna</p>
   <script src="script.js"></script>
 </body>
 </html>
